# Rentaxon-backend

./: .gitignore  README.md  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
Products/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
Products/migrations/: 0001_initial.py  0002_category_product_product_category.py  0002_initial.py  0003_review_reviewer_favorite.py  0004_review_auther_alter_review_reviewed_delete_reviewer.py
Rentaxon/: asgi.py  settings.py  urls.py  views.py  wsgi.py
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
staticfiles/rest_framework/js/: csrf.js
